# zeroai

./: .gitignore  Cargo.toml  README.md  README.zh.md  REVIEW.md  fix_auth.sh  fix_tui.sh  install.ps1  install.sh  prompt.txt  run_agent.sh  run_agent2.sh
.github/workflows/: build.yml
ai/: Cargo.toml
ai-proxy/: Cargo.toml
ai-proxy/src/: config_tui.rs  doctor.rs  server.rs
ai/src/: lib.rs  mapper.rs  types.rs
ai/src/auth/: config.rs  mod.rs
ai/src/models/: static_models.rs
ai/src/oauth/: anthropic.rs  google_antigravity.rs  google_gemini_cli.rs  mod.rs  openai_codex.rs
ai/src/providers/: anthropic.rs  google.rs  google_gemini_cli.rs  mod.rs  openai.rs
zeroai/: Cargo.toml
zeroai-proxy/: Cargo.toml
zeroai-proxy/src/: config_tui.rs  doctor.rs  main.rs  server.rs
zeroai/src/: client.rs  lib.rs  mapper.rs  types.rs
zeroai/src/auth/: config.rs  mod.rs  sniff.rs
zeroai/src/models/: fetch.rs  mod.rs  static_models.rs
zeroai/src/oauth/: github_copilot.rs  google_antigravity.rs  google_gemini_cli.rs  mod.rs  openai_codex.rs  pkce.rs  qwen_portal.rs
zeroai/src/providers/: anthropic.rs  compatible.rs  google.rs  google_gemini_cli.rs  mod.rs  openai.rs  retry.rs  sanitize.rs
