[workspace]
members = ["ai", "ai-proxy"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
dirs = "6"
open = "5"
tokio-stream = "0.1"
bytes = "1"
eventsource-stream = "0.2"
pin-project-lite = "0.2"
async-stream = "0.3"
serde_urlencoded = "0.7"
