[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
eventsource-stream = { workspace = true }
pin-project-lite = { workspace = true }
async-stream = { workspace = true }
serde_urlencoded = { workspace = true }
