[package]
name = "zeroai-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
zeroai = { path = "../zeroai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP server
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
http-body-util = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
crossterm = "0.29"
ratatui = "0.29"
async-trait = "0.1"
url = "2.5"
serde_urlencoded = "0.7"
rand = { workspace = true }
